--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 matplotlib = "^3.9.1"
+pytest = "^8.2.2"
+maturin = "^1.7.0"
 
 
 [build-system]
